# point-cloud-registration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  caratheodory.py  demo_estimate_normals.py  demo_icp.py  demo_matching.py  demo_visual_voxel.py  demo_visualize_voxels.py  demo_vppicp.py  math_tools.py  pyproject.toml  setup.py  speed_test_comparison.cpp  speed_test_comparison.py  speed_test_voxel_filter.py  test_speed.py  test_speed_icp.py  test_speed_ndt.py  test_speed_ppicp.py
.github/workflows/: python-app.yml
benchmark/: __init__.py  speed_test_comparison.cpp  speed_test_comparison.py  speed_test_comparison_downsampling.py  speed_test_comparison_mkl.py  speed_test_voxel_filter.py  test.py  test_data.py
benchmark_pcl/: speed_test_comparison.cpp
data/: README.md  get_data.py
point_cloud_registration/: __init__.py  caratheodory.py  estimate_normals.py  fast_voxel_point_plane_icp.py  fast_voxelized_plane_icp.py  icp.py  kdtree.py  math_tools.py  ndt.py  plane_icp.py  point_plane_icp.py  registration.py  voxel.py  voxel_old.py  voxel_point_plane_icp.py  voxel_point_plane_icp_speed_test.py  voxelized_plane_icp.py  voxelized_point_plane_icp.py
tests/: test_caratheodory.py  test_icp.py  test_ndt.py  test_picp.py  test_plane_icp.py  test_vpicp.py
