[tool.poetry]
name = "point-cloud-registration"
version = "0.1.0"
description = "A point cloud registration library"
authors = ["Liu Yang <scomup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scipy = "^1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
